keycloak/keycloak_v1_Service_keycloak-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '8080'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 24.0.5
    helm.sh/chart: keycloak-21.6.1
  name: keycloak-metrics
  namespace: keycloak
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
  type: ClusterIP
